--- a/config.h.in
+++ b/config.h.in
@@ -75,6 +75,9 @@
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
+/* Define if you have the <socks.h> header file. */
+#undef HAVE_SOCKS_H
+
 /* Define if you have the cV library (-lcV).  */
 #undef HAVE_LIBCV
 
