--- a/Makefile.in
+++ b/Makefile.in
@@ -39,8 +39,8 @@ DB_LIB=@DB_LIB@
 
 # Step 4: IF your DB Library/Includes are in a non-standard place, 
 # define These
-#DB_INC_LOC=-I/usr/src/inn-2.3/include
-#DB_LIB_LOC=-L/usr/src/inn-2.3/lib
+#DB_INC_LOC=-I/usr/src/inn-2.3.4/include
+#DB_LIB_LOC=-L/usr/src/inn-2.3.4/lib
 
 # Step 5: If you want to use embedded PERL functions as kill routines
 # define these. 
@@ -56,9 +56,9 @@ PERL_LIB=@PERL_LIB@
 PERL_DEFS=@PERL_DEFS@
 PERL_INC_LOC=@PERL_INC_LOC@
 PERL_LIB_LOC=@PERL_LIB_LOC@
-#PERL_CORE=/usr/lib/perl5/5.00503/i686-linux/CORE
+#PERL_CORE=/usr/lib/perl5/5.8.0/i386-linux-thread-mult/CORE
 #PERL_LIB=-lperl -lcrypt
-#PERL_DEFS=-DPERL_EMBED -Dbool=char -DHAS_BOOL
+PERL_DEFS=-D_REENTRANT -D_GNU_SOURCE
 #PERL_INC_LOC=-I$(PERL_CORE)
 #PERL_LIB_LOC=-L$(PERL_CORE)
 
@@ -103,7 +103,7 @@ srcdir = @srcdir@
 PKGNAME=suck
 VERSION_MAJOR=4
 VERSION_MINOR=3
-VERSION_PATCH=1
+VERSION_PATCH=2
 VERSION=$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH)
 
 CC = @CC@
@@ -287,7 +287,7 @@ makerpm: maketar
 		exit 1 ; \
 	fi
 	#pwd
-	rpm -ta /home/bobyetman/${PKGNAME}-${VERSION}.tar.gz	
+	rpmbuild -ta /home/bobyetman/${PKGNAME}-${VERSION}.tar.gz	
 # move em to my home dir and clean up
 	mv /usr/src/redhat/RPMS/i386/*.rpm ~
 	mv /usr/src/redhat/SRPMS/*.rpm ~
