Apply suck-4.3.0-inn3_headers_location.patch
Apply suck-4.3.0-inn3_headers_location.patch from openSUSE
created by pth@novell.com

Adapted configure.in to check also the `inn` subdirectory.

--- a/configure.in
+++ b/configure.in
@@ -62,7 +62,7 @@ AC_CHECK_LIB(inn, main, [
   LIBS=$savedLIBS
   AC_MSG_CHECKING([for libinn.h])
   for path in $testpath ; do
-    if test -f $path/libinn.h; then
+    if [ test -f $path/libinn.h ] || [ test -f $path/inn/libinn.h ] ; then
       AC_MSG_RESULT($path)
       found="yes"
       CPPFLAGS="$CPPFLAGS -I$path"
