Add rpost SSL flags
Named 01_rpost-ssl.diff in Debian.
Named suck-4.3.2-parallel-build.patch in Fedora.

Closes https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=501343

--- a/Makefile.in
+++ b/Makefile.in
@@ -217,7 +217,7 @@ xover.o: xover.c
 	$(CC) -c $(CFLAGS) $(DBZ_GCC_FLAGS) $(CPPFLAGS) $(DEFS) $(PERL_DEFS) $(PERL_INC_LOC) $<
 
 rpost.o: rpost.c
-	$(CC) -c $(CFLAGS) $(DBZ_GCC_FLAGS) $(CPPFLAGS) $(DEFS) $(PERL_DEFS) $(PERL_INC_LOC) $<
+	$(CC) -c $(CFLAGS) $(SSL_DEFS) $(DBZ_GCC_FLAGS) $(CPPFLAGS) $(DEFS) $(PERL_DEFS) $(PERL_INC_LOC) $<
 
 .c.o: 
 	$(CC) -c $(CFLAGS) $(SSL_DEFS) $(GCC_FLAGS) $(CPPFLAGS) $(DEFS) $< 
