--- a/Makefile.in
+++ b/Makefile.in
@@ -225,12 +225,12 @@ rpost.o: rpost.c
 #---------------------------------------------------------------------------
 # stuff to make sure configure is up to date (I hope)
 #---------------------------------------------------------------------------
-${srcdir}/configure: configure.in
+${srcdir}/configure: configure.ac
 	cd ${srcdir} && autoconf
 
 # autoheader might not change config.h.in, so touch a stamp file
 ${srcdir}/config.h.in: stamp-h.in
-${srcdir}/stamp-h.in: configure.in
+${srcdir}/stamp-h.in: configure.ac
 	cd ${srcdir} && autoheader
 	echo timestamp  > ${srcdir}/stamp-h.in
 
